--- a/Cozy_Cuisine/Views/Account/Login.cshtml
+++ b/Cozy_Cuisine/Views/Account/Login.cshtml
@@ -8,14 +8,12 @@
 <form asp-action="Login" method="post">
     <div class="form-group">
         <label asp-for="Email"></label>
-        <input asp-for="Email" class="form-control" />
-        <span asp-validation-for="Email" class="text-danger"></span>
+        <input asp-for="Email" class="form-control" required />
     </div>
 
     <div class="form-group">
         <label asp-for="Password"></label>
-        <input asp-for="Password" class="form-control" type="password" />
-        <span asp-validation-for="Password" class="text-danger"></span>
+        <input asp-for="Password" class="form-control" type="password" required />
     </div>
 
 
