--- a/Cozy_Cuisine/Views/Account/Login.cshtml
+++ b/Cozy_Cuisine/Views/Account/Login.cshtml
@@ -3,8 +3,10 @@
 @{
     ViewData["Title"] = "Login";
 }
-<h2>Login</h2>
-
+<h2>Login</h2> 
+<form asp-controller="Account" asp-action="Logout" method="post">
+    <button type="submit" class="btn btn-danger">Logout</button>
+</form>
 <form asp-action="Login" method="post">
     <div class="form-group">
         <label asp-for="Email"></label>
