--- a/Cozy_Cuisine/Views/Shared/_Layout.cshtml
+++ b/Cozy_Cuisine/Views/Shared/_Layout.cshtml
@@ -53,19 +53,7 @@
             </div>
         </nav>
     </header>
-    @if (TempData["Success"] != null)
-    {
-        <div class="alert alert-success">
-            @TempData["Success"]
-        </div>
-    }
 
-    @if (TempData["Error"] != null)
-    {
-        <div class="alert alert-danger">
-            @TempData["Error"]
-        </div>
-    }
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
@@ -81,12 +69,10 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://cdn.datatables.net/2.2.2/js/dataTables.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
-    <script>
-            setTimeout(function () {
-                $(".alert").fadeOut("slow");
-            }, 3000); // Hide after 3 seconds
-    </script>
+
+    @* Visitor Counter one count per day *@
     <script>
         function setVisitorCookie() {
             if (!document.cookie.includes("visitor_tracked=true")) {
@@ -99,6 +85,34 @@
         }
 
         setVisitorCookie(); // Run when page loads
+    </script>
+
+    @* Sweet Alert Success and Error *@
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            var message = '@TempData["Success"]';
+            if (message) {
+                Swal.fire({
+                    title: "Success!",
+                    text: message,
+                    icon: "success",
+                    confirmButtonText: "OK"
+                });
+            }
+        });
+    </script>
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            var message = '@TempData["Error"]';
+            if (message) {
+                Swal.fire({
+                    title: "Error!",
+                    text: message,
+                    icon: "Error",
+                    confirmButtonText: "OK"
+                });
+            }
+        });
     </script>
 
     @await RenderSectionAsync("Scripts", required: false)
