remaining api for admin backend, dashboard (not finish), Contact (for contact/email function), Bug report (reporting and commenting), Character

--- a/Cozy_Cuisine/Views/Patch/PatchManagement.cshtml
+++ b/Cozy_Cuisine/Views/Patch/PatchManagement.cshtml
@@ -27,7 +27,7 @@
     </div>
 
     <div class="form-group">
-        <label>News Image URLs</label>
+        <label>Patch Image URLs</label>
         <div id="imageUrlContainer">
             <div class="input-group mb-2">
                 <input type="text" class="form-control" name="urlImageList" placeholder="Enter Image URL" />
