--- a/Cozy_Cuisine/Views/Manage/CreditsManagement.cshtml
+++ b/Cozy_Cuisine/Views/Manage/CreditsManagement.cshtml
@@ -91,7 +91,7 @@
 
                     <div class="mb-3">
                         <label class="form-label">Role</label>
-                        <textarea class="form-control" id="role" name="Role" required></textarea>
+                        <input class="form-control" id="role" name="Role" required>
                     </div>
                     <div class="mb-3">
                         <label class="form-label">URLGif</label>
