--- a/Cozy_Cuisine/Views/Shared/_Layout.cshtml
+++ b/Cozy_Cuisine/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="UnderConstruction">News</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="UnderConstruction">Contact</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Contacts">Contact</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="UnderConstruction">Credits</a>
@@ -60,13 +60,15 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+  @*   <footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2025 - Cozy_Cuisine - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+                  *@                                               
+
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>@* 
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script> *@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://cdn.datatables.net/2.2.2/js/dataTables.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
@@ -87,7 +89,33 @@
 
         setVisitorCookie(); // Run when page loads
     </script>
-
+    @* Sweet Alert Success and Error *@
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            var message = '@TempData["Success"]';
+            if (message) {
+                Swal.fire({
+                    title: "Success!",
+                    text: message,
+                    icon: "success",
+                    confirmButtonText: "OK"
+                });
+            }
+        });
+    </script>
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            var message = '@TempData["Error"]';
+            if (message) {
+                Swal.fire({
+                    title: "Error!",
+                    text: message,
+                    icon: "Error",
+                    confirmButtonText: "OK"
+                });
+            }
+        });
+    </script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
