--- a/Cozy_Cuisine/Views/Shared/Admin_Layout.cshtml
+++ b/Cozy_Cuisine/Views/Shared/Admin_Layout.cshtml
@@ -157,7 +157,7 @@
     <script src="https://cdn.canvasjs.com/canvasjs.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
-
+    <script src="https://unpkg.com/htmx.org@2.0.4"></script>
 
     @* Makes all Tables to become DataTable  *@
     <script>
